# musescore-old

./: Makefile  Makefile.mingw  Makefile.osx  mkdebian
mscore/: CMakeLists.txt  ChangeLog  Doxyfile.in  NEWS  README  README.scripts  TODO  all.h  config.h.in  gen-qt-projectfile  gen-qt-projectfile.bat  mscore.pro
mscore/al/: CMakeLists.txt  al.h  fraction.cpp  pos.cpp  pos.h  sig.cpp  sig.h  tempo.cpp  tempo.h  xml.h
mscore/awl/: CMakeLists.txt  aslider.cpp  aslider.h  awlplugin.cpp  awlplugin.h  colorlabel.cpp  colorlabel.h  denomspinbox.cpp  fastlog.h  fparm.h  midipanknob.h  mslider.cpp  poslabel.cpp  poslabel.h
mscore/bww2mxml/: CMakeLists.txt  README  lexer.cpp  lexer.h  main.cpp  mxmlwriter.cpp  mxmlwriter.h  parser.cpp  parser.h  symbols.cpp  symbols.h  writer.cpp  writer.h
mscore/cmake/: mingw32.cmake  mingw32.mingw.cmake
mscore/debian/: changelog  copyright  manpage.xml  watch
mscore/demos/: All_Dudes.mscz  CMakeLists.txt  Estudio-No1-Tarrega.msc  PlanxtyCarolan.msc  Reunion.mscz  Triumph.mscz  adeste.msc  adeste.mscx  bach-bc2.msc  bach-bc2.mscx  bwv565.mscx  bwv565.mscz  chordsymbols.mscz  goldberg-a-busoni.mscz  golliwogg.msc  golliwogg.mscx  golliwogg.mscz  gymnopedie1.msc  gymnopedie1.mscx  inv1.msc  inv10.msc  inv10.mscx  inv13.msc  inv13.mscx  inv4.msc  inv6.msc  inv6.mscx  italian-1.msc  italian-1.mscx  italian-1.mscz  pictures.mscx  praeludium1.msc  praeludium2.mscz  prelude-sr.mscx  prelude-sr.mscz  prelude.msc  prelude.mscx  promenade.msc  promenade.mscx  sarabande.xml  (+7 more)
mscore/diff/: CMakeLists.txt  diff_match_patch.cpp
mscore/doc/: CMakeLists.txt  MANUAL  README.translate
mscore/fluid/: CMakeLists.txt  chan.cpp  chorus.cpp  chorus.h  config.h  conv.cpp  conv.h  defsfont.cpp  defsfont.h  dsp.cpp  dsp.h  dsp_core.cpp  fluid.cpp  fluid.h  fluidsynth.h  gen.cpp  list.cpp  midi.h  midi_router.h  mod.cpp  priv.h  ramsfont.h  rev.cpp  rev.h  settings.cpp  settings.h  sfont.cpp  sfont.h  sfont3.cpp  synth.cpp  synth.h  sys.cpp  sys.h  tuning.cpp  tuning.h  voice.cpp  voice.h
mscore/fonts/: mscore-20.sfd
mscore/gendoc/: CMakeLists.txt  doc-de.xml  gendoc.cpp
mscore/genft/: CMakeLists.txt  genft.cpp
mscore/installer/: installer.h  installer.qrc  installerbase.ui
mscore/libmscore/: .qped  CMakeLists.txt  accidental.cpp  accidental.h  arpeggio.cpp  arpeggio.h  articulation.cpp  articulation.h  barline.cpp  barline.h  bb.h  beam.cpp  beam.h  bend.cpp  bend.h  box.cpp  box.h  bracket.cpp  bracket.h  breath.cpp  breath.h  bsp.cpp  bsp.h  bsymbol.h  check.cpp  chord.cpp  chord.h  chordline.cpp  chordline.h  chordlist.cpp  chordlist.h  chordrest.cpp  chordrest.h  clef.cpp  clef.h  cleflist.cpp  cleflist.h  cmd.cpp  cursor.cpp  cursor.h  (+195 more)
mscore/m-al/: color.h  sig.cpp  sig.h  xml.cpp  xml.h
mscore/m-libmscore/: accidental.cpp  arpeggio.cpp  articulation.cpp  barline.cpp  bend.h  bracket.cpp  chord.cpp  chordline.cpp  cursor.h  durationtype.cpp  durationtype.h  element.cpp  fifo.cpp  fifo.h  file.cpp  fingering.cpp  fingering.h  glissando.cpp  globals.h  hairpin.cpp  harmony.cpp  harmony.h  instrchange.h  key.cpp  key.h  keysig.h  layout.cpp  layoutbreak.cpp  layoutbreak.h  line.cpp  note.cpp  ottava.h  page.cpp  part.cpp  pitchspelling.cpp  preferences.cpp  preferences.h  rendermidi.cpp  repeat.cpp  repeatlist.cpp  (+17 more)
mscore/m-msynth/: CMakeLists.txt  chan.cpp  chorus.cpp  chorus.h  dsp.cpp  event.cpp  fluid.cpp  fluid.h  mod.cpp  piano.cpp  rev.cpp  rev.h  seq_event.cpp  seq_event.h  sfont.cpp  sparm.cpp  sparm_p.h  synth_voice.cpp  synti.h  voice.h
mscore/manual/: CMakeLists.txt  MuseScore-zh-hans.html  ProcessHTML.py  README.txt  manual-de.odt  manual-dev.odt
mscore/mconvert/: mconvert.cpp  mconvert.qrc
mscore/mscore/: CMakeLists.txt  aboutbox.ui  aboutmusicxmlbox.ui  accidental.cpp  accidental.h  actions.cpp  album.cpp  album.ui  all.h  alsa.cpp  alsa.h  alsamidi.h  analyse.h  arpeggio.cpp  arpeggio.h  articulation.cpp  articulation.h  articulation.ui  articulationprop.cpp  articulationprop.h  audio.h  barline.cpp  barline.h  barline.ui  bb.cpp  bb.h  beam.cpp  beam.h  beam.ui  bend.cpp  bend.h  bendcanvas.h  bendproperties.h  box.cpp  box.h  boxproperties.cpp  boxproperties.ui  bracket.cpp  bracket.h  breath.cpp  (+511 more)
mscore/mstyle/: CMakeLists.txt  animationdata.cpp  animationdata.h  animations.cpp  cache.h  colorscheme.cpp  colorscheme.h  colorutils.cpp  colorutils.h  mconfig.cpp  mconfig.h  mstyle.cpp  mstyle.h  stylehelper.cpp  stylehelper.h  tileset.cpp  tileset.h  transitions.cpp
mscore/msynth/: CMakeLists.txt  fparm.cpp  fparm.h  sparm.cpp  sparm.h  sparm_p.h  synti.cpp  synti.h
mscore/msynth2/: CMakeLists.txt  channel.cpp  instrument.cpp  instrument.h  msynth.cpp  msynth.h
mscore/mtest/: CMakeLists.txt  build.xml  cmake.inc  mcursor.cpp  mtest.cpp  mtest.h  mtest.qrc  part1-2o.mscx  part1.mscx  part2-2o.mscx  part2-4o.mscx  part2.mscx  testmidi.cpp  testnote.cpp  testparts.cpp  testutils.cpp  testutils.h
mscore/mxml/: SAX.h  SAX2.h  catalog.h  chvalid.h  encoding.cpp  encoding.h  entities.cpp  entities.h  error.cpp  globals.cpp  hash.h  libxml.h  list.cpp  list.h  parser.cpp  parser.h  parserInternals.h  pattern.cpp  pattern.h  relaxng.h  tree.h  uri.h  valid.cpp  xlink.h  xmlIO.cpp  xmlIO.h  xmlautomata.h  xmlerror.h  xmlreader.cpp  xmlstring.cpp  xmlversion.h.in  xpointer.h
mscore/ofqf/: CMakeLists.txt  qoscserver.cpp  qosctypes.cpp  qosctypes.h
mscore/omr/: .qped  CMakeLists.txt  globals.cpp  mreader.h  ocr.cpp  omr.cpp  omr.h  omrpage.cpp  omrpage.h  omrview.cpp  omrview.h  page.cpp  page.h  pdf.cpp  pdf.h  scan.cpp  scan.h  scanview.cpp  scanview.h  skew.cpp  utils.cpp  utils.h  xml.cpp
mscore/onlinedoc/: CMakeLists.txt  doc-de.xml  doc-en.xml  doc-es.xml  doc-sp.xml  doit
mscore/osdabzip/: CMakeLists.txt  README  README.mscore  unzip.cpp  zip.cpp  zip.h  zip_p.h  zipentry_p.h
mscore/packaging/: CodeResources  FileAssociation.nsh  MacOSXBundleInfo.plist.in  NSIS.template.in  WIX.template.in  mscore.desktop.in  mscore.nsi  package_mac
mscore/player-android/: androidaudio.cpp  androidaudio.h  config.h  driver.h  (+9 more)
(+6362 files in other folders)
