#=============================================================================
#  MusE
#  Linux Music Editor
#  $Id:$
#
#  Copyright (C) 2002-2008 by Werner Schweer and others
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License version 2.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#=============================================================================

install(FILES
      sarabande.xml
      adeste.msc
      bach-bc2.msc
      inv1.msc
      inv4.msc
      inv6.msc
      inv10.msc
      inv13.msc
      praeludium1.msc
      prelude.msc
      promenade.msc
      scales.msc
      sonata16.msc
      italian-1.msc
      golliwogg.msc
      Estudio-No1-Tarrega.msc
      PlanxtyCarolan.msc
      wtc1fuga5.mscz
      schnee.mscz
      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}demos
      )

